Add components for edit-member, list-member, member-details, and admin

--- a/club-manager/src/app/about/about.component.html
+++ b/club-manager/src/app/about/about.component.html
@@ -1,3 +1,2 @@
-<p>
-  about works!
-</p>
+<h1>About This League</h1>
+<p>In 2015 this ESPN Fantasy fooball league was founded with 14 friends from college. </p>
