--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -1,7 +1,15 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink="">Fantasy Football League</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="about">About</a></li>
+    </ul>
+  </div>
+</nav>
 
-<h1>
-  Welcome to {{title}}!!
-</h1>
-  <button class="btn btn-danger">here</button>
-
-<router-outlet></router-outlet>
+<div class="container">
+  <!-- <h1>{{title}}</h1> -->
+  <router-outlet></router-outlet>
+</div>
