Add firebase files

--- a/club-manager/src/app/list-member/list-member.component.html
+++ b/club-manager/src/app/list-member/list-member.component.html
@@ -1,3 +1,5 @@
-<p>
-  list-member works!
-</p>
+<h2>Marketplace</h2>
+
+<div *ngFor="let member of members">
+  <h3><em>{{member.firstName}}</em></h3>
+</div>
