Add member-detail to display firebase data

--- a/club-manager/src/app/member-detail/member-detail.component.html
+++ b/club-manager/src/app/member-detail/member-detail.component.html
@@ -1,3 +1,5 @@
-<p>
-  member-detail works!
-</p>
+<div>
+  <h3>{{(memberToDisplay | async)?.firstName}}</h3>
+  <h4>{{(memberToDisplay | async)?.lastName}}</h4>
+  <p>{{(memberToDisplay | async)?.userName}}</p>
+</div>
