--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -13,3 +13,10 @@
   <!-- <h1>{{title}}</h1> -->
   <router-outlet></router-outlet>
 </div>
+
+
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
