add click method to visit member-details page upon clicking member name on list-member page

--- a/club-manager/src/app/list-member/list-member.component.html
+++ b/club-manager/src/app/list-member/list-member.component.html
@@ -1,12 +1,14 @@
 <h2>Marketplace</h2>
 
-<div *ngFor="let member of members | async">
-  <h3><em>{{member.firstName}}</em></h3>
+<div *ngFor="let member of members | async" class="panel panel-default">
+  <div class="panel-body">
+    <h3 (click)="goToDetailPage(member)"><em>{{member.firstName}} {{member.lastName}}</em></h3>
+  </div>
 </div>
 
 
-<h2>Marketplace</h2>
-<!-- 
+
+<!--
 <div *ngFor="let album of albums | async"  class="panel panel-default">
   <div class="panel-body">
     <h3 (click)="goToDetailPage(album)"><em>{{album.title}}</em> by {{album.artist}}</h3>
