--- a/club-manager/src/app/list-member/list-member.component.html
+++ b/club-manager/src/app/list-member/list-member.component.html
@@ -1,21 +1,14 @@
-<h2>Marketplace</h2>
+<h2>Fantasy Football Team Member</h2>
 
-<div *ngFor="let member of members | async" class="panel panel-default">
+<select (change)="onChange($event.target.value)">
+  <option value="allRoles" selected="selected">All Roles</option>
+  <option value="Member">Member</option>
+  <option value="Commissioner">Commissioner</option>
+</select>
+
+
+<div *ngFor="let member of members | async | rolePipe:filterByRole" class="panel panel-default">
   <div class="panel-body">
     <h3 (click)="goToDetailPage(member)"><em>{{member.firstName}} {{member.lastName}}</em></h3>
   </div>
 </div>
-
-
-
-<!--
-<div *ngFor="let album of albums | async"  class="panel panel-default">
-  <div class="panel-body">
-    <h3 (click)="goToDetailPage(album)"><em>{{album.title}}</em> by {{album.artist}}</h3>
-    <div *ngIf="currentRoute === '/admin'">
-      {{album.description}}
-      <hr>
-      <app-edit-album [selectedAlbum]="album"></app-edit-album>
-    </div>
-  </div>
-</div> -->
