--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -6,6 +6,9 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="list-member">Members</a></li>
+    </ul>
   </div>
 </nav>
 
