--- a/club-manager/src/app/list-member/list-member.component.html
+++ b/club-manager/src/app/list-member/list-member.component.html
@@ -10,5 +10,10 @@
 <div *ngFor="let member of members | async | rolePipe:filterByRole" class="panel panel-default">
   <div class="panel-body">
     <h3 (click)="goToDetailPage(member)"><em>{{member.firstName}} {{member.lastName}}</em></h3>
+    <div *ngIf="currentRoute === '/admin'">
+      {{member.jobTitle}}
+      <hr>
+      <app-edit-member [selectedMember]="member"></app-edit-member>
+    </div>
   </div>
 </div>
