--- a/club-manager/src/app/edit-member/edit-member.component.html
+++ b/club-manager/src/app/edit-member/edit-member.component.html
@@ -32,6 +32,9 @@
 <label>New Job Title:</label>
 <input [(ngModel)]="selectedMember.jobTitle">
 <br>
+<label>New Image Link:</label>
+<input [(ngModel)]="selectedMember.image">
+<br>
 
 <button (click)="beginUpdatingMember(selectedMember)">Update</button>
 <hr>
