--- a/club-manager/src/styles.css
+++ b/club-manager/src/styles.css
@@ -7,3 +7,11 @@
   background-color: #f5f5f5;
   padding: 15px;
 }
+
+.portrait {
+  border-radius: 150px;
+  width: 100px;
+  height: 100px;
+  box-shadow: 5px 5px 20px grey;
+  margin: 10px;
+}
