--- a/club-manager/src/styles.css
+++ b/club-manager/src/styles.css
@@ -15,3 +15,11 @@
   box-shadow: 5px 5px 20px grey;
   margin: 10px;
 }
+
+
+/*espn green 105719*/
+
+/*espn red DD0000*/
+
+
+/*espn black 2B2C2D*/
