add component for announcement

--- a/club-manager/src/app/admin/admin.component.html
+++ b/club-manager/src/app/admin/admin.component.html
@@ -71,7 +71,7 @@
       </div>
 
 
-      <button (click)="submitForm(newFirstName.value, newLastName.value, newUserName.value, newYearsInLeague.value, newLastYearRanking.value, newProjectionRanking.value, newLocation.value, newLeagueChampion.value, newRole.value, newJobTitle.value, newImage.value); newFirstName.value=''; newLastName.value=''; newUserName.value=''; newYearsInLeague.value=''; newLastYearRanking.value=''; newProjectionRanking.value=''; newLocation.value=''; newLeagueChampion.value=''; newRole.value=''; newJobTitle.value=''; newImage.value=''">Add</button>
+      <button class="btn btn-primary" (click)="submitForm(newFirstName.value, newLastName.value, newUserName.value, newYearsInLeague.value, newLastYearRanking.value, newProjectionRanking.value, newLocation.value, newLeagueChampion.value, newRole.value, newJobTitle.value, newImage.value); newFirstName.value=''; newLastName.value=''; newUserName.value=''; newYearsInLeague.value=''; newLastYearRanking.value=''; newProjectionRanking.value=''; newLocation.value=''; newLeagueChampion.value=''; newRole.value=''; newJobTitle.value=''; newImage.value=''">Add</button>
     </div>
   </div>
 </div>
