--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -13,17 +13,17 @@
       <li><a routerLink="announcements">Announcements</a></li>
     </ul>
     <ul *ngIf="(user | async) != null" class="nav navbar-nav navbar-right">
-      <li>  <a routerLink="admin">Admin</a></li>
+      <li>  <a id="admin-css" routerLink="admin">Admin</a></li>
     </ul>
   </div>
 </nav>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <label>Email:</label>
-    <input #email>
+    <input class="control-label col-sm-2" #email placeholder="email">
 
     <label>Password:</label>
-    <input type="password" #password>
+    <input class="control-label col-sm-1" type="password" #password placeholder="password">
 
     <button class="btn btn-info btn-sm" *ngIf="(user | async)?.email == null" (click)="login(email.value, password.value); email.value=''; password.value=''">Login</button>
     <button class="btn btn-warning btn-sm" *ngIf="(user | async)?.email != null"(click)="logout()">Logout</button>
