--- a/club-manager/src/app/about/about.component.html
+++ b/club-manager/src/app/about/about.component.html
@@ -1,2 +1,5 @@
-<h1>About This League</h1>
-<p>In 2015 this ESPN Fantasy fooball league was founded with 14 friends from college. </p>
+<div class="about-page">
+  <h1>About This League</h1>
+  <p>Many years ago, 14 college friends came together and formed a fantasy fooball league.After years of terrifc trades, trash talk and terrible draft picks, the 14 team members are still friends.  </p>
+  
+</div>
