--- a/club-manager/src/app/list-member/list-member.component.html
+++ b/club-manager/src/app/list-member/list-member.component.html
@@ -1,22 +1,26 @@
-<h2>Fantasy Football Team Member</h2>
+<div class="player-outline">
+  <h2>Fantasy Football Team Member</h2>
 
-<select (change)="onChange($event.target.value)">
-  <option value="allRoles" selected="selected">All Roles</option>
-  <option value="Member">Member</option>
-  <option value="Commissioner">Commissioner</option>
-</select>
+  <select (change)="onChange($event.target.value)">
+    <option value="allRoles" selected="selected">All Roles</option>
+    <option value="Member">Member</option>
+    <option value="Commissioner">Commissioner</option>
+  </select>
 
 
-<div *ngFor="let member of members | async | rolePipe:filterByRole" class="panel panel-default">
-  <div class="panel-body">
-    <h3 (click)="goToDetailPage(member)"><em>{{member.firstName}} {{member.lastName}}</em></h3>
-    <img src="{{member.image}}" class="portrait">
-    <br>  
+  <div *ngFor="let member of members | async | rolePipe:filterByRole">
+    <div >
+      <h3 (click)="goToDetailPage(member)"><em>{{member.firstName}} {{member.lastName}}</em></h3>
+      <img src="{{member.image}}" class="portrait">
+      <br>
+      <br>
+      <br>
 
-    <div *ngIf="currentRoute === '/admin'">
-      {{member.jobTitle}}
-      <hr>
-      <app-edit-member [selectedMember]="member"></app-edit-member>
+      <div *ngIf="currentRoute === '/admin'">
+        {{member.jobTitle}}
+        <hr>
+        <app-edit-member [selectedMember]="member"></app-edit-member>
+      </div>
     </div>
   </div>
 </div>
