change admin component

--- a/club-manager/src/app/admin/admin.component.html
+++ b/club-manager/src/app/admin/admin.component.html
@@ -80,7 +80,7 @@
   <app-list-member></app-list-member>
 </div>
 
-<div class="panel panel-default">
+<!-- <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Add A New Annoucement</h3>
   </div>
@@ -101,11 +101,11 @@
         <br>
         <input #newAuthor>
       </div>
-      <!-- <button class="btn btn-primary" (click)="submitForm(newTitle.value, newDescription.value, newAuthor.value, ); newTitle.value=''; newDescription.value=''; newAuthor.value=''">Add</button> -->
+
     </div>
   </div>
-</div>
+</div> -->
 
-<div>
+<!-- <div>
   <app-list-announcements></app-list-announcements>
-</div>
+</div> -->
