--- a/club-manager/src/app/list-announcements/list-announcements.component.html
+++ b/club-manager/src/app/list-announcements/list-announcements.component.html
@@ -1,2 +1,3 @@
-<h2>Announcents</h2>
-<p>Announcement's Page Coming Soon</p>
+<div class="about-page">
+  <p>Announcement's Page Coming Soon</p>
+</div>
