--- a/club-manager/src/app/list-member/list-member.component.html
+++ b/club-manager/src/app/list-member/list-member.component.html
@@ -1,4 +1,4 @@
-<div class="player-outline">
+<div >
   <h2>Fantasy Football Team Member</h2>
 
   <select (change)="onChange($event.target.value)">
